continue angular 2 refactoring

--- a/web_angular2/web/lib/pages/application_detail_component.html
+++ b/web_angular2/web/lib/pages/application_detail_component.html
@@ -21,7 +21,7 @@
     <small>Versions</small>
     </h3>
     <div class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Branch : {{currentSelectedBranch}}
             <span class="caret"></span>
         </button>
