--- a/web_angular2/web/lib/pages/application_detail_component.html
+++ b/web_angular2/web/lib/pages/application_detail_component.html
@@ -1,10 +1,10 @@
 <div *ngIf="currentApp!=null" class="content">
-    <application_detail_header [application]="currentApp" ></application_detail_header>
+    <application_detail_header [application]="currentApp" (appUpdated)="appUpdated($event)" ></application_detail_header>
 
     <error_comp [error]="error"></error_comp>
     <hr/>
     <h2>
-        <small>Releases</small> <button *ngIf="canAdmin" class="btn btn-danger btn-fab btn-fab-mini btn-round">
+        <small>Releases</small> <button data-toggle="modal" data-target="#allModals" (click)="displayAddArtifactModal()" *ngIf="canAdmin" class="btn btn-danger btn-fab btn-fab-mini btn-round">
         <i  class="material-icons">add</i>
     </button>
     </h2>
@@ -12,7 +12,7 @@
         <div class="col-sm-9 col-md-7">
             <material-expansionpanel-set>
                 <material-expansionpanel wide [showSaveCancel]=false name="Latest Build">
-                    <artifact  *ngFor="let artifact of applicationsLastestVersion" [artifact]="artifact" [canDelete]="canAdmin"></artifact>
+                    <artifact  *ngFor="let artifact of applicationsLastestVersion" [artifact]="artifact" [canDelete]="canAdmin" (artifactDeleted)="artifactDeleted($event)" ></artifact>
                 </material-expansionpanel>
             </material-expansionpanel-set>
         </div>
@@ -37,19 +37,19 @@
 
             <div class="col-sm-12 visible-sm visible-xs">
                 <material-expansionpanel wide *ngFor="let sortIdentifier of filteredSortedIdentifier"  [showSaveCancel]=false secondaryText="{{branchForSortIdentifier(sortIdentifier)}}" name="{{versionForSortIdentifier(sortIdentifier)}}">
-                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin" ></artifact>
+                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin" (artifactDeleted)="artifactDeleted($event)"></artifact>
                 </material-expansionpanel>
             </div>
 
             <div class="col-md-6 hidden-sm hidden-xs">
                 <material-expansionpanel wide *ngFor="let sortIdentifier of filteredSortedIdentifier; let even = even"  [ngClass]="even ? '':'hidden'" [showSaveCancel]="false" secondaryText="{{branchForSortIdentifier(sortIdentifier)}}" name="{{versionForSortIdentifier(sortIdentifier)}}">
-                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin" ></artifact>
+                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin" (artifactDeleted)="artifactDeleted($event)"></artifact>
                 </material-expansionpanel>
             </div>
 
             <div class="col-md-6 hidden-sm hidden-xs">
                 <material-expansionpanel wide *ngFor="let sortIdentifier of filteredSortedIdentifier; let odd = odd" [ngClass]="odd ? '':'hidden'" [showSaveCancel]="false" secondaryText="{{branchForSortIdentifier(sortIdentifier)}}" name="{{versionForSortIdentifier(sortIdentifier)}}">
-                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin"></artifact>
+                    <artifact *ngFor="let artifact of groupedArtifacts[sortIdentifier]"  [sortIdentifier]="sortIdentifier" [artifact]="artifact" [canDelete]="canAdmin" (artifactDeleted)="artifactDeleted($event)"></artifact>
                 </material-expansionpanel>
             </div>
         </material-expansionpanel-set>
