--- a/web_angular2/web/lib/pages/account_component.html
+++ b/web_angular2/web/lib/pages/account_component.html
@@ -1,1 +1,50 @@
-<h1> TODO : ACCOUNT MANAGEMENT</h1>
+<h2 style="color:red" *ngIf="warningMessage!=null">{{warningMessage}}</h2>
+<h2>Account Settings</h2>
+<div class="row">
+    <div class="col-md-6 col-xs-12">
+        <h3 class="">Email : {{currentUser?.email}}</h3>
+        <div class="thumbnail">
+            <div class="row">
+                <div class="col-md-10">
+                    <div class="input-group">
+                        <label class="input-group-addon">User Name :</label>
+                        <input type="text"  class="col-lg-2 form-control" [ngModel]="newName">
+                    </div>
+                    <br/>
+
+                    <div class="input-group">
+                        <label class="input-group-addon">Password :</label>
+                        <input_password text="newPassword" placeholder="'new password'"></input_password>
+                        <!-- <input type="password"  placeholder="new password" class="col-lg-2 form-control" ng-model="newPassword"> -->
+                    </div>
+                    <button [ngClass]="canUpdate ? '' : 'invisible'" type="button" class="btn btn-xs btn-flat btn-success" (click)="update()"><i class="material-icons">done</i>Apply</button>
+                    <button [ngClass]="canUpdate ? '' : 'invisible'" type="button" class="btn btn-xs btn-flat btn-primary" (click)="resetUser()"><i class="material-icons">cancel</i>Cancel</button>
+                </div>
+            </div>
+            <error_comp [error]="userDetailErrorMessage"></error_comp>
+        </div>
+    </div>
+</div>
+<div class=" row">
+    <h4 class="col-md-12">Administed Apps:</h4>
+</div>
+<div class=" row">
+    <error_comp [error]="error"></error_comp>
+</div>
+<div class=" row">
+    <div class="col-md-8 col-xs-12">
+        <div class="container" *ngFor="let app of administratedApps">
+            <div class=" row">
+                <div class="col-md-8 panel panel-default" >
+                    <div class="panel-body">
+                        <img class="small-media-icon" src="{{app.appIcon}}" onError="this.src='images/placeholder.jpg'"/>
+                        <span class="platform{{app.platform}}"></span>{{app.name}}
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <button class="btn btn-xs btn-flat btn-primary" (click)="remove(app)"><i class="material-icons">remove</i>remove administration</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
