continue angular 2 refactoring : administrationn

--- a/web_angular2/web/lib/pages/administration_component.html
+++ b/web_angular2/web/lib/pages/administration_component.html
@@ -1,1 +1,16 @@
-<h1> TODO : ADMINISTRATION</h1>
+
+<material-tab-panel>
+    <material-tab label="Overview">
+        <h1 class="text-center"> Server Management</h1>
+    </material-tab>
+    <material-tab label="Users Administration">
+        <div>
+            <users_administration ></users_administration>
+        </div>
+    </material-tab>
+    <material-tab label="Logs Console">
+        <div class="container">
+            <log_console class="tim-row"></log_console>
+        </div>
+    </material-tab>
+</material-tab-panel>
