home and loading

--- a/web_angular2/web/index.html
+++ b/web_angular2/web/index.html
@@ -23,7 +23,14 @@
     <link href="assets/css/mdt-specific.css" rel="stylesheet"/>
 </head>
 <body>
- <mdt_comp> Loading ... MDT </mdt_comp>
+ <mdt_comp>
+     <div class="center-div">
+         <p class="text-center"><img style="vertical-align:baseline;" src="images/logo_64.png"/></p>
+         <h2 class="text-center">Mobile App Distribution Tool</h2>
+         <p class="text-center"><b>Loading</b></p>
+         <p class="text-center"><img src="images/loading.gif"/></p>
+     </div>
+ </mdt_comp>
 
 <script defer src="main.dart" type="application/dart"></script>
 <script defer src="packages/browser/dart.js"></script>
