--- a/web_angular2/web/lib/pages/home_component.html
+++ b/web_angular2/web/lib/pages/home_component.html
@@ -1,13 +1,10 @@
-<div class="row tim-row" style="padding-top:150px">
-    <div class="github-ribbon-container ">
-        <a href="https://github.com/rgroult/MobDistTool"
-           class="github-ribbon alizarin">Fork me on GitHub!</a>
-    </div>
-    <div class="container">
-        <h2><img style="vertical-align:baseline;" src="images/logo_64.png"/>Mobile App Distribution Tool</h2>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.min.css" />
+<div class="row tim-row" style="padding-top:30px">
+        <h2 class="text-center"><img style="vertical-align:baseline;" src="images/logo_64.png"/>Mobile App Distribution Tool</h2>
         <br/>
         <br/>
-        <p>Manage yours users, application and download artifacts.</p>
+        <p class="text-center">Manage yours users, application and download artifacts.</p>
 
-    </div>
+
+    <a class="github-fork-ribbon  right-bottom " href="https://github.com/rgroult/MobDistTool" title="Fork me on GitHub">Fork me on GitHub!</a>
 </div>
