continue angular 2 refactoring : theming

--- a/web_angular2/web/index.html
+++ b/web_angular2/web/index.html
@@ -6,6 +6,12 @@
   <!--  <base href="/"> -->
 
     <title>Mobile App Distribution Tool</title>
+    <style>
+        <!-- Theme color -->
+        :root {
+            --primary-color: orange;
+        }
+    </style>
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
@@ -14,7 +20,7 @@
     <!-- CSS Files -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="assets/css/material-kit.css" rel="stylesheet">
+    <link href="assets/sass/material-kit.css" rel="stylesheet">
 
     <!--  Material Dashboard CSS    -->
     <link href="assets/css/dashboard.css" rel="stylesheet"/>
