remove unused code

--- a/web_angular2/web/index.html
+++ b/web_angular2/web/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/web_angular2/web/">
-    <!--<script>document.write('<base href="' + document.location + '" />');</script> -->
+  <!--  <base href="/web_angular2/web/"> -->
+   <script>document.write('<base href="' + document.location + '" />');</script>
   <!--  <base href="/"> -->
 
     <title>Mobile App Distribution Tool</title>
-    <style>
-        <!-- Theme color -->
-        :root {
-            --primary-color: orange;
-        }
-    </style>
     <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
