--- a/web_angular2/web/lib/pages/application_detail_component.html
+++ b/web_angular2/web/lib/pages/application_detail_component.html
@@ -4,7 +4,7 @@
     <error_comp [error]="error"></error_comp>
     <hr/>
     <h2>
-        <small>Releases</small> <button data-toggle="modal" data-target="#allModals" (click)="displayAddArtifactModal()" *ngIf="canAdmin" class="btn btn-danger btn-fab btn-fab-mini btn-round">
+        <small>Versions</small> <button data-toggle="modal" data-target="#allModals" (click)="displayAddArtifactModal()" *ngIf="canAdmin" class="btn btn-danger btn-fab btn-fab-mini btn-round">
         <i  class="material-icons">add</i>
     </button>
     </h2>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <h3>
-    <small>Versions</small>
+    <small>Sorted versions</small>
     </h3>
     <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
