--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="tim row">
-            <material-button (click)="isOthersAppExpanded=!isOthersAppExpanded"><h2>Other
+            <material-button (click)="isOthersAppExpanded=!isOthersAppExpanded"><h2>All
                 <i *ngIf="isOthersAppExpanded" class="material-icons md-48">keyboard_arrow_up</i>
                 <i *ngIf="!isOthersAppExpanded" class="material-icons md-48">keyboard_arrow_down</i></h2></material-button>
             <div *ngIf="isOthersAppExpanded" class="row">
