--- a/web_angular2/web/lib/pages/application_list_component.html
+++ b/web_angular2/web/lib/pages/application_list_component.html
@@ -21,7 +21,7 @@
                             <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
                         </div>
                         <div class="mdt-card-content">
-                            <p class="category" >{{app.platform}}</p>
+                            <p class="category" ><span class="platform{{app.platform}}_small"></span>{{app.platform}}</p>
                             <h3 class="title">{{app.name}}</h3>
                         </div>
                         <div class="mdt-card-footer">
@@ -44,7 +44,7 @@
                             <img class="card-image card-app-image" onError="this.onError=null;this.src='images/placeholder.jpg'" src="{{app.appIcon}}"/>
                         </div>
                         <div class="mdt-card-content">
-                            <p class="category" >{{app.platform}}</p>
+                            <p class="category" ><span class="platform{{app.platform}}_small"></span>{{app.platform}}</p>
                             <h3 class="title">{{app.name}}</h3>
                         </div>
                         <div class="mdt-card-footer">
